# GM-Forex-EA

./: .gitignore  ASL  ATP  README.md
CPP/MTBridge/projects/client/: CMakeLists.txt  build.bat
CPP/MTBridge/projects/server/: CMakeLists.txt
CPP/MTBridge/projects/server/src/: dll_main.cpp  mt5_bridge.cpp  mt5_bridge.hpp
CPP/MTBridge/projects/server/src/commons/: CMakeLists.txt
CPP/MTBridge/projects/server/src/shared/: CMakeLists.txt
MQL/: .gitignore  GM.mq5  GM.mqh  GMTest.mq5
MQL/MTS/: ExcDescriptor.i.mqh  ExpertAdvisor.i.mqh  ExpertAdvisor.mqh  LoggedState.i.mqh  Logger.i.mqh  Logger.mqh
MQL/MTS/Lib/: ArrayList.i.mqh  ArrayList.mqh  Iterator.i.mqh  Util.mqh
MQL/MTS/Market/: AccountInfo.i.mqh  AccountInfo.mqh  SymbolInfo.i.mqh  SymbolInfo.mqh
NET/: GM-Forex-EA.sln
NET/projects/Commons/: Commons.csproj
NET/projects/MarketDataDumper/: MarketDataDumper.csproj
NET/projects/MarketDataProvider/: MarketDataProvider.csproj
NET/projects/TestDataGenerator/: TestDataGenerator.csproj
Setup/: .gitignore  GM-Forex-EA.iss
_DOCS/: BacktestingResults.docx  CC-MT4-EA.docx  Conversation.docx  GM-EA-Settings-01.xlsx  ReportHistory-50538554.xlsx  architecture-v01.drawio
_DOCS/Presets/SL+TP/: DE30-M15-01.set  DE30-M15-02.set  DE30-M15-03.set  US30-M15-01.set  US30-M15-02.set  US30-M15-03.set  US30-M15-04.set  US30-M15-05.set  USDCHF-M15-01.set  USDCHF-M15-02.set  USDCHF-M15-03.set  XAUUSD-M15-01.set
_DOCS/Tests/SL+TP/: DE30-M15-01.xlsx  US30-M15-01.xlsx  US30-M15-02.xlsx  US30-M15-03-2months.xlsx  USDCHF-M15-01.xlsx  WTI_K1-M15-01.xlsx  XAUUSD-M15-01.xlsx
(+193 files in other folders)
